@@ -114,7 +114,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
   extension
 * (bug 2581, bug 6834) Added links to thumbnail in several resolutions to the 
   file description page. The sizes are set by $wgImageLimits.
-
+* (bug 28031) Add pageCount support to ArchivedFile
+  
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
 * (bug 10871) Javascript and CSS pages in MediaWiki namespace are no longer
